Mejoras legibilidad código